--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
-  <display-name>StudentsCRU</display-name>
+  <display-name>StudentsCRUD</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.jsp</welcome-file>
@@ -9,9 +9,9 @@
     <welcome-file>default.jsp</welcome-file>
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
-	<resource-ref>
-		<res-ref-name>mongodb/mongoClient</res-ref-name>
-		<res-type>com.mongodb.MongoClient</res-type>
-		<res-auth>Container</res-auth>
-	</resource-ref>
+  <resource-ref>
+    <res-ref-name>mongodb/mongoClient</res-ref-name>
+    <res-type>com.mongodb.MongoClient</res-type>
+    <res-auth>Container</res-auth>
+  </resource-ref>
 </web-app>
